--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,7 @@ SECRET_KEY_BASE=development_secret
 WEB_CONCURRENCY=1
 
 # Database
-DB_HOST=127.0.0.1
+DB_HOST=postgresql
 DB_PORT=$(make services-port SERVICE=postgresql PORT=5432)
 DB_USER=postgres
 
