refactor and env variables

--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,6 @@ DB_USER=postgres
 SENTRY_DSN=
 S3_BUCKET=
 DEVISE_SECRET_KEY=
+
+ACCOUNTS = ["113", "123"]
+URI_CONST = https://bankeleven.herokuapp.com/api/v1/transactions/date
